@@ -46,6 +46,7 @@ documents those changes that are of interest to users and administrators.
  -- slurmdbd.service - add "After" relationship to all common names for MariaDB
     to reduce startup delays.
  -- slurmrestd/v0.0.37 - Correct displaying node states that are UNKNOWN.
+ -- slurmrestd/v0.0.37 - Add flags to node states.
 
 * Changes in Slurm 20.11.5
 ==========================
